--- a/tests/nested/classic/hotplug/task.yaml
+++ b/tests/nested/classic/hotplug/task.yaml
@@ -5,19 +5,19 @@ prepare: |
     . "$TESTSLIB/nested.sh"
 
     nested_copy "${GOHOME}"/snapd_*.deb
-    nested_execute "sudo apt update"
-    nested_execute "sudo apt install -y ./snapd_*.deb"
+    nested_exec "sudo apt update"
+    nested_exec "sudo apt install -y ./snapd_*.deb"
     #shellcheck disable=SC2016
-    nested_execute 'DEBIAN_FRONTEND=noninteractive sudo -E apt install -y "linux-image-extra-$(uname -r)"' || true
+    nested_exec 'DEBIAN_FRONTEND=noninteractive sudo -E apt install -y "linux-image-extra-$(uname -r)"' || true
     #shellcheck disable=SC2016
-    nested_execute 'DEBIAN_FRONTEND=noninteractive sudo -E apt install -y "linux-modules-extra-$(uname -r)"' || true
+    nested_exec 'DEBIAN_FRONTEND=noninteractive sudo -E apt install -y "linux-modules-extra-$(uname -r)"' || true
 
     snap pack "$TESTSLIB"/snaps/serial-port-hotplug
     nested_copy serial-port-hotplug_1.0_all.snap
     # add test user to dialout group required for ttyUSB* devices
-    nested_execute "sudo usermod -a -G dialout user1"
+    nested_exec "sudo usermod -a -G dialout user1"
 
-    nested_execute "sudo snap install --devmode jq"
+    nested_exec "sudo snap install --devmode jq"
 
 restore: |
     rm -f /tmp/serialport{0,1}
@@ -27,10 +27,10 @@ debug: |
     . "$TESTSLIB/nested.sh"
 
     set +e
-    nested_execute "snap connections --all"
-    nested_execute "snap list"
-    nested_execute "dmesg"
-    nested_execute 'sudo jq -r ".data[\"hotplug-slots\"]" /var/lib/snapd/state.json'
+    nested_exec "snap connections --all"
+    nested_exec "snap list"
+    nested_exec "dmesg"
+    nested_exec 'sudo jq -r ".data[\"hotplug-slots\"]" /var/lib/snapd/state.json'
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
@@ -38,28 +38,28 @@ execute: |
     #shellcheck source=tests/lib/hotplug.sh
     . "$TESTSLIB/hotplug.sh"
     
-    if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+    if nested_exec "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
         echo "USB serial already registered, exiting..."
         exit 1
     fi
 
-    nested_execute "sudo snap install hello-world"
+    nested_exec "sudo snap install hello-world"
 
     echo "Enabling hotplug"
-    nested_execute "sudo snap set core experimental.hotplug=true"
+    nested_exec "sudo snap set core experimental.hotplug=true"
 
     echo "Plugging the device"
     hotplug_add_dev1
 
     # sanity checks to make sure qemu setup is correct
     for _ in $(seq 5); do
-        if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+        if nested_exec "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
             break
         fi
         sleep 1
     done
 
-    nested_execute "ls /dev/tty*" | MATCH "ttyUSB0"
+    nested_exec "ls /dev/tty*" | MATCH "ttyUSB0"
 
     echo "Checking that qemuusbserial hotplug slot is present"
     check_slot_present qemuusbserial
@@ -71,13 +71,13 @@ execute: |
 
     # sanity check to make sure qemu event was triggered correctly
     for _ in $(seq 5); do
-        if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+        if nested_exec "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
             sleep 1
         else
             break
         fi
     done
-    if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+    if nested_exec "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
         echo "USB serial should not be registered anymore, exiting..."
         exit 1
     fi
@@ -93,16 +93,16 @@ execute: |
     check_slot_present qemuusbserial
 
     echo "Installing test snap with serial port plug"
-    nested_execute "sudo snap install --dangerous serial-port-hotplug_1.0_all.snap"
+    nested_exec "sudo snap install --dangerous serial-port-hotplug_1.0_all.snap"
 
     echo "Connecting hotplug slot of the first device"
-    nested_execute "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
+    nested_exec "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
     check_slot_connected qemuusbserial
 
     echo "Veryfing serial-port permissions of the snap"
     verify_apparmor_profile "/dev/ttyUSB0"
-    nested_execute "/snap/bin/serial-port-hotplug.consumer write-1" | MATCH "Access to /dev/ttyUSB0 ok"
-    nested_execute "/snap/bin/serial-port-hotplug.consumer write-2" | MATCH "Access to /dev/ttyUSB1 failed"
+    nested_exec "/snap/bin/serial-port-hotplug.consumer write-1" | MATCH "Access to /dev/ttyUSB0 ok"
+    nested_exec "/snap/bin/serial-port-hotplug.consumer write-2" | MATCH "Access to /dev/ttyUSB1 failed"
     MATCH "write-1 on /dev/ttyUSB0" < /tmp/serialport1
 
     echo "Unplugging the device"
@@ -138,23 +138,23 @@ execute: |
     echo "Veryfing serial-port permissions of the snap, the first device is now expected on ttyUSB1"
     check_slot_device_path qemuusbserial "/dev/ttyUSB1"
     verify_apparmor_profile "/dev/ttyUSB1"
-    nested_execute "/snap/bin/serial-port-hotplug.consumer write-3" | MATCH "Access to /dev/ttyUSB0 failed"
-    nested_execute "/snap/bin/serial-port-hotplug.consumer write-4" | MATCH "Access to /dev/ttyUSB1 ok"
+    nested_exec "/snap/bin/serial-port-hotplug.consumer write-3" | MATCH "Access to /dev/ttyUSB0 failed"
+    nested_exec "/snap/bin/serial-port-hotplug.consumer write-4" | MATCH "Access to /dev/ttyUSB1 ok"
     MATCH "write-3 on /dev/ttyUSB1" < /tmp/serialport1
 
     echo "Restarting snapd should restore both hotplug slots since devices are still present"
-    nested_execute "sudo systemctl stop snapd.service snapd.socket"
-    nested_execute "sudo systemctl start snapd.service snapd.socket"
+    nested_exec "sudo systemctl stop snapd.service snapd.socket"
+    nested_exec "sudo systemctl start snapd.service snapd.socket"
     check_slot_connected qemuusbserial
     check_slot_not_gone qemuusbserial
     check_slot_present qemuusbserial-1
-    nested_execute "/snap/bin/serial-port-hotplug.consumer write-5" | MATCH "Access to /dev/ttyUSB1 ok"
+    nested_exec "/snap/bin/serial-port-hotplug.consumer write-5" | MATCH "Access to /dev/ttyUSB1 ok"
     MATCH "write-5 on /dev/ttyUSB1" < /tmp/serialport1
 
     echo "Unplugging first device while snapd is stopped and then starting snapd remembers the slot internally due to connection"
-    nested_execute "sudo systemctl stop snapd.service snapd.socket"
+    nested_exec "sudo systemctl stop snapd.service snapd.socket"
     hotplug_del_dev1
-    nested_execute "sudo systemctl start snapd.service snapd.socket"
+    nested_exec "sudo systemctl start snapd.service snapd.socket"
     check_slot_not_present qemuusbserial
     check_slot_gone qemuusbserial
 
@@ -166,7 +166,7 @@ execute: |
     echo "Disconnecting first slot and then unplugging the device removes the slot completely"
     # manual snap disconnect doesn't implement retry and errors out if there are conflicting changes, so wait for hotplug changes to complete
     wait_for_all_changes
-    nested_execute "sudo snap disconnect serial-port-hotplug:serial-port :qemuusbserial"
+    nested_exec "sudo snap disconnect serial-port-hotplug:serial-port :qemuusbserial"
     check_slot_present qemuusbserial
     hotplug_del_dev1
     check_slot_not_present qemuusbserial
@@ -184,10 +184,10 @@ execute: |
     check_slot_device_path qemuusbserial "/dev/ttyUSB0"
 
     echo "Connecting hotplug slot of the first device again"
-    nested_execute "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
+    nested_exec "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
     check_slot_connected qemuusbserial
 
     echo "Hotplug slot stays after removing the snap"
-    nested_execute "sudo snap remove serial-port-hotplug"
+    nested_exec "sudo snap remove serial-port-hotplug"
     check_slot_present qemuusbserial
     check_slot_not_gone qemuusbserial
