--- a/tests/nested/classic/snapshots-with-core-refresh-revert/task.yaml
+++ b/tests/nested/classic/snapshots-with-core-refresh-revert/task.yaml
@@ -6,51 +6,51 @@ prepare: |
 
     # configure hosts file
     # shellcheck disable=SC2016
-    nested_execute 'echo "127.0.1.1 $HOSTNAME" | sudo tee /etc/hosts'
+    nested_exec 'echo "127.0.1.1 $HOSTNAME" | sudo tee /etc/hosts'
 
     # install snapd and snaps on nested vm
     nested_copy "${GOHOME}"/snapd_*.deb
-    nested_execute "sudo apt update"
-    nested_execute "sudo apt install -y ./snapd_*.deb"
-    nested_execute "sudo snap install test-snapd-sh"
-    nested_execute "sudo snap install test-snapd-rsync"
+    nested_exec "sudo apt update"
+    nested_exec "sudo apt install -y ./snapd_*.deb"
+    nested_exec "sudo snap install test-snapd-sh"
+    nested_exec "sudo snap install test-snapd-rsync"
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
 
     # Make sure the core in the nested vm is the correct one
-    nested_execute "sudo snap refresh core --${NESTED_CORE_CHANNEL}"
+    nested_exec "sudo snap refresh core --${NESTED_CORE_CHANNEL}"
 
     # use the snaps, so they create the dirs:
-    nested_execute "sudo test-snapd-sh.sh -c 'true'"
-    nested_execute "sudo test-snapd-rsync.rsync --version >/dev/null"
+    nested_exec "sudo test-snapd-sh.sh -c 'true'"
+    nested_exec "sudo test-snapd-rsync.rsync --version >/dev/null"
     for snap in test-snapd-sh test-snapd-rsync; do
-       nested_execute "echo "hello versioned $snap" | sudo tee /root/snap/$snap/current/canary.txt"
-       nested_execute "echo "hello common $snap" | sudo tee /root/snap/$snap/common/canary.txt"
+       nested_exec "echo "hello versioned $snap" | sudo tee /root/snap/$snap/current/canary.txt"
+       nested_exec "echo "hello common $snap" | sudo tee /root/snap/$snap/common/canary.txt"
     done
 
     # create snapshot, grab its id
-    SET_ID=$( nested_execute "sudo snap save test-snapd-sh test-snapd-rsync" | cut -d\  -f1 | tail -n1 )
+    SET_ID=$( nested_exec "sudo snap save test-snapd-sh test-snapd-rsync" | cut -d\  -f1 | tail -n1 )
 
     # delete the canary files
-    nested_execute "sudo rm /root/snap/test-snapd-sh/{current,common}/canary.txt"
-    nested_execute "sudo rm /root/snap/test-snapd-rsync/{current,common}/canary.txt"
+    nested_exec "sudo rm /root/snap/test-snapd-sh/{current,common}/canary.txt"
+    nested_exec "sudo rm /root/snap/test-snapd-rsync/{current,common}/canary.txt"
 
     # when the core is refreshed the snap snapshot can be restored"
-    nested_execute "sudo snap refresh core --${NESTED_CORE_REFRESH_CHANNEL}"
-    nested_execute "sudo snap restore $SET_ID test-snapd-rsync"
-    test "$( nested_execute "sudo cat /root/snap/test-snapd-rsync/current/canary.txt" )" = "hello versioned test-snapd-rsync"
-    test "$( nested_execute "sudo cat /root/snap/test-snapd-rsync/common/canary.txt" )" = "hello common test-snapd-rsync"
-    nested_execute "sudo test ! -f /root/snap/test-snapd-sh/common/canary.txt"
-    nested_execute "sudo test ! -f /root/snap/test-snapd-sh/current/canary.txt"
+    nested_exec "sudo snap refresh core --${NESTED_CORE_REFRESH_CHANNEL}"
+    nested_exec "sudo snap restore $SET_ID test-snapd-rsync"
+    test "$( nested_exec "sudo cat /root/snap/test-snapd-rsync/current/canary.txt" )" = "hello versioned test-snapd-rsync"
+    test "$( nested_exec "sudo cat /root/snap/test-snapd-rsync/common/canary.txt" )" = "hello common test-snapd-rsync"
+    nested_exec "sudo test ! -f /root/snap/test-snapd-sh/common/canary.txt"
+    nested_exec "sudo test ! -f /root/snap/test-snapd-sh/current/canary.txt"
 
     # when the core is reverted the snap snapshot can be restored"
-    nested_execute "sudo snap revert core"
-    nested_execute "sudo snap restore $SET_ID test-snapd-sh"
-    test "$( nested_execute "sudo cat /root/snap/test-snapd-sh/current/canary.txt" )" = "hello versioned test-snapd-sh"
-    test "$( nested_execute "sudo cat /root/snap/test-snapd-sh/common/canary.txt" )" = "hello common test-snapd-sh"
+    nested_exec "sudo snap revert core"
+    nested_exec "sudo snap restore $SET_ID test-snapd-sh"
+    test "$( nested_exec "sudo cat /root/snap/test-snapd-sh/current/canary.txt" )" = "hello versioned test-snapd-sh"
+    test "$( nested_exec "sudo cat /root/snap/test-snapd-sh/common/canary.txt" )" = "hello common test-snapd-sh"
 
     echo "And the snapshot can be removed"
-    nested_execute "sudo snap forget $SET_ID"
-    nested_execute "sudo snap saved --id=$SET_ID" | MATCH "No snapshots found"
+    nested_exec "sudo snap forget $SET_ID"
+    nested_exec "sudo snap saved --id=$SET_ID" | MATCH "No snapshots found"
