--- a/tests/nested/core/core-snap-refresh-on-core/task.yaml
+++ b/tests/nested/core/core-snap-refresh-on-core/task.yaml
@@ -24,21 +24,21 @@ execute: |
     fi
 
     # Install test snap
-    nested_execute "sudo snap install test-snapd-sh"
+    nested_exec "sudo snap install test-snapd-sh"
 
     # Ensure we have a good starting place
-    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_exec "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
 
     # go to known good starting place
-    nested_execute "snap download core --${NESTED_CORE_CHANNEL}"
-    nested_execute "sudo snap ack core_*.assert"
-    nested_execute "sudo snap install core_*.snap"
+    nested_exec "snap download core --${NESTED_CORE_CHANNEL}"
+    nested_exec "sudo snap ack core_*.assert"
+    nested_exec "sudo snap install core_*.snap"
 
     # Check the initial core is installed and snaps can be executed
     test "$(get_nested_core_revision_installed)" = "${INITIAL_REV}"
 
     # Ensure test-snapd-sh works
-    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_exec "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
 
     # Refresh
     refresh_to_new_core "$NESTED_CORE_REFRESH_CHANNEL"
@@ -47,10 +47,10 @@ execute: |
     test "$(get_nested_core_revision_installed)" = "${NEW_REV}"
 
     # Ensure test-snapd-sh works
-    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_exec "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
 
     # Revert core
-    nested_execute "sudo snap revert core" || true
+    nested_exec "sudo snap revert core" || true
     nested_nested_wait_for_no_ssh
     nested_nested_wait_for_ssh
 
@@ -58,4 +58,4 @@ execute: |
     test "$(get_nested_core_revision_installed)" = "${INITIAL_REV}"
 
     # Ensure test-snapd-sh works
-    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_exec "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
