--- a/tests/nested/manual/cloud-init-nocloud-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-nocloud-not-vuln/task.yaml
@@ -52,7 +52,7 @@ debug: |
         cat snapd-before-reboot.logs
     fi
     echo "logs from current nested VM boot snapd"
-    nested_execute "sudo journalctl -e --no-pager -u snapd" || true
+    nested_exec "sudo journalctl -e --no-pager -u snapd" || true
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
@@ -67,13 +67,13 @@ execute: |
     # the legitimate cloud-init user is the normal-user user
 
     # wait for cloud-init to finish importing the first seed
-    nested_execute "sudo cloud-init status --wait"
+    nested_exec "sudo cloud-init status --wait"
 
     echo "The initial cloud-init user was created"
-    nested_execute "cat /var/lib/extrausers/passwd" | MATCH normal-user
+    nested_exec "cat /var/lib/extrausers/passwd" | MATCH normal-user
 
     # wait for snap seeding to be done
-    nested_execute "sudo snap wait system seed.loaded"
+    nested_exec "sudo snap wait system seed.loaded"
 
     # if we are not building from current, then we need to prep the snapd snap
     # to install with the fix, this simulates/verifies that devices in the field
@@ -86,7 +86,7 @@ execute: |
             nested_copy "$PWD/core-from-snapd-deb.snap"
 
             # install the core snap
-            nested_execute "sudo snap install core-from-snapd-deb.snap --dangerous"
+            nested_exec "sudo snap install core-from-snapd-deb.snap --dangerous"
 
             # now we wait for the reboot for the new core snap
             nested_wait_for_no_ssh
@@ -97,7 +97,7 @@ execute: |
             nested_copy "$PWD/snapd-from-deb.snap"
 
             # install the snapd snap
-            nested_execute "sudo snap install snapd-from-deb.snap --dangerous"
+            nested_exec "sudo snap install snapd-from-deb.snap --dangerous"
         fi
     fi
 
@@ -113,7 +113,7 @@ execute: |
     # action that we can test for.
 
     echo "Waiting for cloud-init..."
-    nested_execute "cloud-init status --wait"
+    nested_exec "cloud-init status --wait"
 
     # TODO: is there a better thing we can wait for here instead? maybe the log
     # message from snapd directly via journalctl ?
@@ -122,16 +122,16 @@ execute: |
 
     # ensure that snapd restricted cloud-init with the zzzz_snapd.cfg file
     echo "Ensuring that snapd restricted cloud-init"
-    nested_execute "cloud-init status" | MATCH "status: done"
-    nested_execute "test ! -f /etc/cloud/cloud-init.disabled"
-    nested_execute "test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
+    nested_exec "cloud-init status" | MATCH "status: done"
+    nested_exec "test ! -f /etc/cloud/cloud-init.disabled"
+    nested_exec "test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
 
     # save snapd logs before continuing as the logs are not persistent
-    nested_execute "sudo journalctl -e --no-pager -u snapd" > snapd-before-reboot.logs
+    nested_exec "sudo journalctl -e --no-pager -u snapd" > snapd-before-reboot.logs
 
     # gracefully shutdown so that we don't have file corruption
     echo "Gracefully shutting down the nested VM to prepare a simulated attack"
-    nested_execute "sudo shutdown -h now" || true
+    nested_exec "sudo shutdown -h now" || true
     nested_wait_for_no_ssh
 
     # now if we reboot and add a cloud-init drive, it will not be imported onto
@@ -154,13 +154,13 @@ execute: |
     # provided a cloud-init drive but importantly, it will not import the drive,
     # so wait for cloud-init to settle down before continuing
     echo "Waiting for cloud-init..."
-    nested_execute "cloud-init status --wait"
+    nested_exec "cloud-init status --wait"
 
     # the attacker-user should not have been created
     echo "The cloud-init attacker user was not created"
-    nested_execute "cat /var/lib/extrausers/passwd" | NOMATCH attacker-user
+    nested_exec "cat /var/lib/extrausers/passwd" | NOMATCH attacker-user
 
     echo "cloud-init is still restricted"
-    nested_execute "cloud-init status" | MATCH "status: done"
-    nested_execute "test ! -f /etc/cloud/cloud-init.disabled"
-    nested_execute "test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
+    nested_exec "cloud-init status" | MATCH "status: done"
+    nested_exec "test ! -f /etc/cloud/cloud-init.disabled"
+    nested_exec "test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
